# FastAPI-Todos

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  todoapp.py
db/: database.py  models.py  schemas.py
utils/: constants.py  utility.py
